# MagneticFieldCalculation

./: README.md  b.txt  d.txt  test.txt
donut/config/: ReadConfigFile.cpp  ReadConfigFile.h  iron_shape_mod.txt
donut/config/ConfigurationFile/: BUglobal.h  backup_global.h  global.h
donut/data/: 1.root  10.root  100.root  101.root  102.root  103.root  104.root  105.root  106.root  107.root  108.root  109.root  110.root  111.root  112.root  121.root  122.root  2.root  21.root  22.root  23.root  24.root  25.root  26.root  27.root  28.root  29.root  2nd.root  3.root  30.root  4.root  5.root  57.root  58.root  59.root  6.root  67.root  68.root  69.root  7.root  (+176 more)
donut/data/20220712/: 20220701.gn
donut/data/AxialDependence/: AxialDependence.gn  AxialGradient.gn  AxialShift.gn
donut/errorstudy/MRI/: construction_MRI.cpp  construction_MRI.h
donut/errorstudy/individualstudy/: error3.cpp  error3.h
donut/errorstudy/toleranceanalysis/: UniformToleranceAnalysis.cpp  UniformToleranceAnalysis.h  analytic.cpp  analytic.h  calctime.cpp  calctime.h  nov5.cpp  nov5.h  oct22.cpp  oct22.h
donut/errorstudy/toleranceanalysis/ErrorStudy_ShimCoil/: ErrorStudy_ShimCoil.cpp  ErrorStudy_ShimCoil.h
donut/errorstudy/toleranceanalysis/ShimCoilError/: HigherMode_ShimCoil.cpp  HigherMode_ShimCoil.h  ShimCoilError.cpp  ShimCoilError.h
donut/errorstudy/toleranceanalysis/dec14/: ripple.cpp  ripple.h
donut/errorstudy/toleranceanalysis/jan11/: jan11.cpp  jan11.h
donut/errorstudy/toleranceanalysis/modeling/: modeling.cpp  modeling.h
donut/errorstudy/toleranceanalysis/nov15/: nov15.cpp  nov15.h
donut/errorstudy/toleranceanalysis/src/: coutInputParameters.cpp  coutInputParameters.h
donut/processor/: Makefile  desk.cpp  desk.h  main.cpp
donut/shimming/: shimming_operation3.cpp  shimming_operation3.h
donut/shimming/src/: target_validity.cpp  target_validity.h
donut/shimming/study/: study1.cpp  study1.h  study2.cpp  study2.h  tmp.root
donut/src/: constants.h  include.h
donut/src/class/Bfield/: Bfield.cpp  Bfield.h
donut/src/class/BiotSavart/: BiotSavart.cpp  BiotSavart.h
donut/src/class/Bs/: Bs.cpp  Bs.h  Bs_2.cpp
donut/src/class/Legendre/: Legendre.cpp  Legendre.h
donut/src/class/ShimCoil/: ShimCoil.cpp  ShimCoil.h  additional_ShimCoil.cpp  draw_ShimCoil.cpp  shim_coil.cpp  shim_coil.h
donut/src/class/ShimCoil/T_ShimCoil/: T_ShimCoil.cpp  T_ShimCoil.h
donut/src/class/cb/: cb.cpp  cb.h
donut/src/class/draw/: draw.cpp  draw.h
donut/src/class/eval/: eval.cpp  eval.h
donut/src/class/info_SVD/: info_SVD.cpp  info_SVD.h
donut/src/class/magnet/: magnet.cpp  magnet.h  shimming_iron.cpp
donut/src/class/magnetic_source/: magnetic_source.cpp  magnetic_source.h
donut/src/class/magnetic_source/coil/: coil.cpp  coil.h
donut/src/class/magnetic_source/mm/: mm.cpp  mm.h
donut/src/class/mms/: mms.cpp  mms.h
donut/src/class/svd/: svd.cpp  svd.h
donut/src/function/step1/: step1.cpp  step1.h
donut/src/function/step2/: step2.cpp  step2.h
donut/src/function/step3/: step3.cpp  step3.h
donut/src/lib/: function_lib.cpp  function_lib.h
donut/src/lib/function_lib_cpp17/: function_lib_cpp17.cpp  function_lib_cpp17.h
donut/various/CoilDesign/: ShimCoilDesign.cpp  ShimCoilDesign.h
donut/various/SVDbattle/: battle.cpp  battle.h
donut/various/ShimCoil/: BestBx.cpp  BestBx.h
donut/various/debug/: cm.cpp  cm.h  debug.cpp  debug.h  src_debug.cpp  src_debug.h
donut/various/debug/jan26/: jan26.cpp  jan26.h  src_jan26.cpp  src_jan26.h
donut/various/iinuma_san_task/: CoilMesh.cpp  CoilMesh.h  ConsistencyCheck.cpp  ConsistencyCheck.h  MoreDegree.cpp  MoreDegree.h  alongR12.txt  hole.cpp  hole.h  minisol_debug.cpp  minisol_debug.h  p2pmap.root  readMiniSol.C  ripple.gn  write_p2pmap.cpp
donut/various/multichannelization/: study1.cpp  study1.h
donut/various/opera/20220810/: FieldMap.cpp  FieldMap.h
donut/various/opera/OPERAstudy/: OPERAstudy.cpp  OPERAstudy.h
donut/various/report/: report1.cpp  report1.h  report2.cpp  report2.h
