set title "reaching uniformity of iron shimming by TSVD"
set xl "truncated eigenmode [a.u]"
set yl "uniformity after shimming [ppm]"
set yl offset -1.8,0
set autoscale
set title font "Arial,20"
set xl font "Arial,20"
set yl font "Arial,20"
set title offset 0,0
set xtics font "Arial,15"
set ytics font "Arial,15"
set key font "Arial,15"
set border lw 2
set key right top
set grid y lw 2
#set yr [0:1.2]
p "ReachingUniformity.dat" u 1:2 title "local uniformity" w l lw 2 lc rgb "red"
rep "ReachingUniformity.dat" u 1:3 title "azimuthally averaged uniformity" w l lw 2 lc rgb "web-blue"
set terminal pngcairo
set output "ReachingUniformity.png"
replot







