set title ""
set xl "x [cm]"
set yl "B_{z} [T]"
#set yl offset -1.8,0
set autoscale
set title font "Arial,20"
set xl font "Arial,20"
set yl font "Arial,20"
set title offset 0,0
set xtics font "Arial,15"
set ytics font "Arial,15"
set key font "Arial,15"
set border lw 2
#set size ratio 1
set key top outside
p "AxialDependence.dat" u 1:2 title "iron yoke" w l lw 2 lc rgb "web-blue"
rep "AxialDependence.dat" u 1:3 title "MC10" w l lw 2 lc rgb "red"
rep "AxialDependence.dat" u 1:4 title "MC11" w l lw 2 lc rgb "web-green"
rep "AxialDependence.dat" u 1:5 title "MC20" w l lw 2 lc rgb "orange"
rep "AxialDependence.dat" u 1:6 title "MC21" w l lw 2 lc rgb "gray"
rep "AxialDependence.dat" u 1:7 title "MC30" w l lw 2 lc rgb "violet"
set term pdfcairo
set output "AxialDependence.pdf"
rep







