set title ""
set xl ""
set yl ""
set zl ""
set yl offset -1.8,0
set autoscale
set title font "Arial,20"
set xl font "Arial,20"
set yl font "Arial,20"
set title offset 0,0
set xtics font "Arial,15"
set ytics font "Arial,15"
set key font "Arial,15"
set border lw 2
set ticslevel 0
set notics
set noxtics
set noytics
set noztics
set nogrid
set noborder
set noxzeroaxis
set noyzeroaxis
set nozzeroaxis
sp "352.dat" title ""  w l lw 1 lc rgb "blue"
rep "354.dat" title ""  w l lw 1 lc rgb "blue"
rep "356.dat" title ""  w l lw 1 lc rgb "blue"
rep "358.dat" title ""  w l lw 1 lc rgb "blue"
rep "360.dat" title ""  w l lw 1 lc rgb "blue"
rep "362.dat" title ""  w l lw 1 lc rgb "blue"
rep "364.dat" title ""  w l lw 1 lc rgb "blue"
rep "366.dat" title ""  w l lw 1 lc rgb "blue"
rep "368.dat" title ""  w l lw 1 lc rgb "blue"
rep "370.dat" title ""  w l lw 1 lc rgb "blue"
rep "372.dat" title ""  w l lw 1 lc rgb "blue"
rep "374.dat" title ""  w l lw 1 lc rgb "blue"
rep "376.dat" title ""  w l lw 1 lc rgb "blue"
rep "378.dat" title ""  w l lw 1 lc rgb "blue"
rep "380.dat" title ""  w l lw 1 lc rgb "blue"
rep "382.dat" title ""  w l lw 1 lc rgb "blue"
rep "384.dat" title ""  w l lw 1 lc rgb "blue"
rep "386.dat" title ""  w l lw 1 lc rgb "blue"
rep "388.dat" title ""  w l lw 1 lc rgb "blue"
rep "390.dat" title ""  w l lw 1 lc rgb "blue"
rep "392.dat" title ""  w l lw 1 lc rgb "blue"
rep "394.dat" title ""  w l lw 1 lc rgb "blue"
rep "396.dat" title ""  w l lw 1 lc rgb "blue"
rep "398.dat" title ""  w l lw 1 lc rgb "blue"
rep "400.dat" title ""  w l lw 1 lc rgb "blue"
rep "402.dat" title ""  w l lw 1 lc rgb "blue"
rep "404.dat" title ""  w l lw 1 lc rgb "blue"
rep "406.dat" title ""  w l lw 1 lc rgb "blue"
rep "408.dat" title ""  w l lw 1 lc rgb "blue"
rep "410.dat" title ""  w l lw 1 lc rgb "blue"
rep "412.dat" title ""  w l lw 1 lc rgb "blue"
rep "414.dat" title ""  w l lw 1 lc rgb "blue"
rep "416.dat" title ""  w l lw 1 lc rgb "blue"
rep "418.dat" title ""  w l lw 1 lc rgb "blue"
rep "420.dat" title ""  w l lw 1 lc rgb "blue"
rep "422.dat" title ""  w l lw 1 lc rgb "blue"
rep "424.dat" title ""  w l lw 1 lc rgb "blue"
rep "426.dat" title ""  w l lw 1 lc rgb "blue"
rep "428.dat" title ""  w l lw 1 lc rgb "blue"
rep "430.dat" title ""  w l lw 1 lc rgb "blue"
rep "432.dat" title ""  w l lw 1 lc rgb "blue"
rep "434.dat" title ""  w l lw 1 lc rgb "blue"
rep "436.dat" title ""  w l lw 1 lc rgb "blue"
rep "438.dat" title ""  w l lw 1 lc rgb "blue"
rep "440.dat" title ""  w l lw 1 lc rgb "blue"
rep "442.dat" title ""  w l lw 1 lc rgb "blue"
rep "444.dat" title ""  w l lw 1 lc rgb "blue"
rep "446.dat" title ""  w l lw 1 lc rgb "blue"
rep "448.dat" title ""  w l lw 1 lc rgb "blue"
rep "450.dat" title ""  w l lw 1 lc rgb "blue"
rep "452.dat" title ""  w l lw 1 lc rgb "blue"
rep "454.dat" title ""  w l lw 1 lc rgb "blue"
rep "456.dat" title ""  w l lw 1 lc rgb "blue"
rep "458.dat" title ""  w l lw 1 lc rgb "blue"
rep "460.dat" title ""  w l lw 1 lc rgb "blue"
rep "462.dat" title ""  w l lw 1 lc rgb "blue"
rep "464.dat" title ""  w l lw 1 lc rgb "blue"
rep "466.dat" title ""  w l lw 1 lc rgb "blue"
rep "468.dat" title ""  w l lw 1 lc rgb "blue"
rep "470.dat" title ""  w l lw 1 lc rgb "blue"
rep "472.dat" title ""  w l lw 1 lc rgb "blue"
rep "474.dat" title ""  w l lw 1 lc rgb "blue"
rep "476.dat" title ""  w l lw 1 lc rgb "blue"
rep "478.dat" title ""  w l lw 1 lc rgb "blue"
rep "480.dat" title ""  w l lw 1 lc rgb "blue"
rep "482.dat" title ""  w l lw 1 lc rgb "blue"
rep "484.dat" title ""  w l lw 1 lc rgb "blue"
rep "486.dat" title ""  w l lw 1 lc rgb "blue"
rep "488.dat" title ""  w l lw 1 lc rgb "blue"
rep "490.dat" title ""  w l lw 1 lc rgb "blue"
rep "492.dat" title ""  w l lw 1 lc rgb "blue"
rep "494.dat" title ""  w l lw 1 lc rgb "blue"
rep "496.dat" title ""  w l lw 1 lc rgb "blue"
rep "498.dat" title ""  w l lw 1 lc rgb "blue"
rep "500.dat" title ""  w l lw 1 lc rgb "blue"
rep "502.dat" title ""  w l lw 1 lc rgb "blue"
rep "504.dat" title ""  w l lw 1 lc rgb "blue"
rep "506.dat" title ""  w l lw 1 lc rgb "blue"
rep "508.dat" title ""  w l lw 1 lc rgb "blue"
rep "510.dat" title ""  w l lw 1 lc rgb "blue"
rep "512.dat" title ""  w l lw 1 lc rgb "blue"
rep "514.dat" title ""  w l lw 1 lc rgb "blue"
rep "516.dat" title ""  w l lw 1 lc rgb "blue"
rep "518.dat" title ""  w l lw 1 lc rgb "blue"
rep "520.dat" title ""  w l lw 1 lc rgb "blue"
rep "522.dat" title ""  w l lw 1 lc rgb "blue"
rep "524.dat" title ""  w l lw 1 lc rgb "blue"
rep "526.dat" title ""  w l lw 1 lc rgb "blue"
rep "528.dat" title ""  w l lw 1 lc rgb "blue"
rep "530.dat" title ""  w l lw 1 lc rgb "blue"
rep "532.dat" title ""  w l lw 1 lc rgb "blue"
rep "534.dat" title ""  w l lw 1 lc rgb "blue"
rep "536.dat" title ""  w l lw 1 lc rgb "blue"
rep "538.dat" title ""  w l lw 1 lc rgb "blue"
rep "540.dat" title ""  w l lw 1 lc rgb "blue"
rep "542.dat" title ""  w l lw 1 lc rgb "blue"
rep "544.dat" title ""  w l lw 1 lc rgb "blue"
rep "546.dat" title ""  w l lw 1 lc rgb "blue"
rep "548.dat" title ""  w l lw 1 lc rgb "blue"
rep "550.dat" title ""  w l lw 1 lc rgb "blue"
rep "552.dat" title ""  w l lw 1 lc rgb "blue"
rep "554.dat" title ""  w l lw 1 lc rgb "blue"
rep "556.dat" title ""  w l lw 1 lc rgb "blue"
rep "558.dat" title ""  w l lw 1 lc rgb "blue"
rep "560.dat" title ""  w l lw 1 lc rgb "blue"
rep "562.dat" title ""  w l lw 1 lc rgb "blue"
rep "564.dat" title ""  w l lw 1 lc rgb "blue"
rep "566.dat" title ""  w l lw 1 lc rgb "blue"
rep "568.dat" title ""  w l lw 1 lc rgb "blue"
rep "570.dat" title ""  w l lw 1 lc rgb "blue"
rep "572.dat" title ""  w l lw 1 lc rgb "blue"
rep "574.dat" title ""  w l lw 1 lc rgb "blue"
rep "576.dat" title ""  w l lw 1 lc rgb "blue"
rep "578.dat" title ""  w l lw 1 lc rgb "blue"
rep "580.dat" title ""  w l lw 1 lc rgb "blue"
rep "582.dat" title ""  w l lw 1 lc rgb "blue"
rep "584.dat" title ""  w l lw 1 lc rgb "blue"
rep "586.dat" title ""  w l lw 1 lc rgb "blue"
rep "588.dat" title ""  w l lw 1 lc rgb "blue"
rep "590.dat" title ""  w l lw 1 lc rgb "blue"
rep "592.dat" title ""  w l lw 1 lc rgb "blue"
rep "594.dat" title ""  w l lw 1 lc rgb "blue"
rep "596.dat" title ""  w l lw 1 lc rgb "blue"
rep "598.dat" title ""  w l lw 1 lc rgb "blue"
rep "600.dat" title ""  w l lw 1 lc rgb "blue"
rep "602.dat" title ""  w l lw 1 lc rgb "blue"
rep "604.dat" title ""  w l lw 1 lc rgb "blue"
rep "606.dat" title ""  w l lw 1 lc rgb "blue"
rep "608.dat" title ""  w l lw 1 lc rgb "blue"
rep "610.dat" title ""  w l lw 1 lc rgb "blue"
rep "612.dat" title ""  w l lw 1 lc rgb "blue"
rep "614.dat" title ""  w l lw 1 lc rgb "blue"
rep "616.dat" title ""  w l lw 1 lc rgb "blue"
rep "618.dat" title ""  w l lw 1 lc rgb "blue"
rep "620.dat" title ""  w l lw 1 lc rgb "blue"
rep "622.dat" title ""  w l lw 1 lc rgb "blue"
rep "624.dat" title ""  w l lw 1 lc rgb "blue"
rep "626.dat" title ""  w l lw 1 lc rgb "blue"
rep "628.dat" title ""  w l lw 1 lc rgb "blue"
rep "630.dat" title ""  w l lw 1 lc rgb "blue"
rep "632.dat" title ""  w l lw 1 lc rgb "blue"
rep "634.dat" title ""  w l lw 1 lc rgb "blue"
rep "636.dat" title ""  w l lw 1 lc rgb "blue"
rep "638.dat" title ""  w l lw 1 lc rgb "blue"
rep "640.dat" title ""  w l lw 1 lc rgb "blue"
rep "642.dat" title ""  w l lw 1 lc rgb "blue"
rep "644.dat" title ""  w l lw 1 lc rgb "blue"
rep "646.dat" title ""  w l lw 1 lc rgb "blue"
rep "648.dat" title ""  w l lw 1 lc rgb "blue"
rep "650.dat" title ""  w l lw 1 lc rgb "blue"
rep "652.dat" title ""  w l lw 1 lc rgb "blue"
rep "654.dat" title ""  w l lw 1 lc rgb "blue"
rep "656.dat" title ""  w l lw 1 lc rgb "blue"
rep "658.dat" title ""  w l lw 1 lc rgb "blue"
rep "660.dat" title ""  w l lw 1 lc rgb "blue"
rep "662.dat" title ""  w l lw 1 lc rgb "blue"
rep "664.dat" title ""  w l lw 1 lc rgb "blue"
rep "666.dat" title ""  w l lw 1 lc rgb "blue"
rep "668.dat" title ""  w l lw 1 lc rgb "blue"
rep "670.dat" title ""  w l lw 1 lc rgb "blue"
rep "672.dat" title ""  w l lw 1 lc rgb "blue"
rep "674.dat" title ""  w l lw 1 lc rgb "blue"
rep "2.dat" title ""  w l lw 1 lc rgb "red"
rep "4.dat" title ""  w l lw 1 lc rgb "red"
rep "6.dat" title ""  w l lw 1 lc rgb "red"
rep "8.dat" title ""  w l lw 1 lc rgb "red"
rep "10.dat" title ""  w l lw 1 lc rgb "red"
rep "12.dat" title ""  w l lw 1 lc rgb "red"
rep "14.dat" title ""  w l lw 1 lc rgb "red"
rep "16.dat" title ""  w l lw 1 lc rgb "red"
rep "18.dat" title ""  w l lw 1 lc rgb "red"
rep "20.dat" title ""  w l lw 1 lc rgb "red"
rep "22.dat" title ""  w l lw 1 lc rgb "red"
rep "24.dat" title ""  w l lw 1 lc rgb "red"
rep "26.dat" title ""  w l lw 1 lc rgb "red"
rep "28.dat" title ""  w l lw 1 lc rgb "red"
rep "30.dat" title ""  w l lw 1 lc rgb "red"
rep "32.dat" title ""  w l lw 1 lc rgb "red"
rep "34.dat" title ""  w l lw 1 lc rgb "red"
rep "36.dat" title ""  w l lw 1 lc rgb "red"
rep "38.dat" title ""  w l lw 1 lc rgb "red"
rep "40.dat" title ""  w l lw 1 lc rgb "red"
rep "42.dat" title ""  w l lw 1 lc rgb "red"
rep "44.dat" title ""  w l lw 1 lc rgb "red"
rep "46.dat" title ""  w l lw 1 lc rgb "red"
rep "48.dat" title ""  w l lw 1 lc rgb "red"
rep "50.dat" title ""  w l lw 1 lc rgb "red"
rep "52.dat" title ""  w l lw 1 lc rgb "red"
rep "54.dat" title ""  w l lw 1 lc rgb "red"
rep "56.dat" title ""  w l lw 1 lc rgb "red"
rep "58.dat" title ""  w l lw 1 lc rgb "red"
rep "60.dat" title ""  w l lw 1 lc rgb "red"
rep "62.dat" title ""  w l lw 1 lc rgb "red"
rep "64.dat" title ""  w l lw 1 lc rgb "red"
rep "66.dat" title ""  w l lw 1 lc rgb "red"
rep "68.dat" title ""  w l lw 1 lc rgb "red"
rep "70.dat" title ""  w l lw 1 lc rgb "red"
rep "72.dat" title ""  w l lw 1 lc rgb "red"
rep "74.dat" title ""  w l lw 1 lc rgb "red"
rep "76.dat" title ""  w l lw 1 lc rgb "red"
rep "78.dat" title ""  w l lw 1 lc rgb "red"
rep "80.dat" title ""  w l lw 1 lc rgb "red"
rep "82.dat" title ""  w l lw 1 lc rgb "red"
rep "84.dat" title ""  w l lw 1 lc rgb "red"
rep "86.dat" title ""  w l lw 1 lc rgb "red"
rep "88.dat" title ""  w l lw 1 lc rgb "red"
rep "90.dat" title ""  w l lw 1 lc rgb "red"
rep "92.dat" title ""  w l lw 1 lc rgb "red"
rep "94.dat" title ""  w l lw 1 lc rgb "red"
rep "96.dat" title ""  w l lw 1 lc rgb "red"
rep "98.dat" title ""  w l lw 1 lc rgb "red"
rep "100.dat" title ""  w l lw 1 lc rgb "red"
rep "102.dat" title ""  w l lw 1 lc rgb "red"
rep "104.dat" title ""  w l lw 1 lc rgb "red"
rep "106.dat" title ""  w l lw 1 lc rgb "red"
rep "108.dat" title ""  w l lw 1 lc rgb "red"
rep "110.dat" title ""  w l lw 1 lc rgb "red"
rep "112.dat" title ""  w l lw 1 lc rgb "red"
rep "114.dat" title ""  w l lw 1 lc rgb "red"
rep "116.dat" title ""  w l lw 1 lc rgb "red"
rep "118.dat" title ""  w l lw 1 lc rgb "red"
rep "120.dat" title ""  w l lw 1 lc rgb "red"
rep "122.dat" title ""  w l lw 1 lc rgb "red"
rep "124.dat" title ""  w l lw 1 lc rgb "red"
rep "126.dat" title ""  w l lw 1 lc rgb "red"
rep "128.dat" title ""  w l lw 1 lc rgb "red"
rep "130.dat" title ""  w l lw 1 lc rgb "red"
rep "132.dat" title ""  w l lw 1 lc rgb "red"
rep "134.dat" title ""  w l lw 1 lc rgb "red"
rep "136.dat" title ""  w l lw 1 lc rgb "red"
rep "138.dat" title ""  w l lw 1 lc rgb "red"
rep "140.dat" title ""  w l lw 1 lc rgb "red"
rep "142.dat" title ""  w l lw 1 lc rgb "red"
rep "144.dat" title ""  w l lw 1 lc rgb "red"
rep "146.dat" title ""  w l lw 1 lc rgb "red"
rep "148.dat" title ""  w l lw 1 lc rgb "red"
rep "150.dat" title ""  w l lw 1 lc rgb "red"
rep "152.dat" title ""  w l lw 1 lc rgb "red"
rep "154.dat" title ""  w l lw 1 lc rgb "red"
rep "156.dat" title ""  w l lw 1 lc rgb "red"
rep "158.dat" title ""  w l lw 1 lc rgb "red"
rep "160.dat" title ""  w l lw 1 lc rgb "red"
rep "162.dat" title ""  w l lw 1 lc rgb "red"
rep "164.dat" title ""  w l lw 1 lc rgb "red"
rep "166.dat" title ""  w l lw 1 lc rgb "red"
rep "168.dat" title ""  w l lw 1 lc rgb "red"
rep "170.dat" title ""  w l lw 1 lc rgb "red"
rep "172.dat" title ""  w l lw 1 lc rgb "red"
rep "174.dat" title ""  w l lw 1 lc rgb "red"
rep "176.dat" title ""  w l lw 1 lc rgb "red"
rep "178.dat" title ""  w l lw 1 lc rgb "red"
rep "180.dat" title ""  w l lw 1 lc rgb "red"
rep "182.dat" title ""  w l lw 1 lc rgb "red"
rep "184.dat" title ""  w l lw 1 lc rgb "red"
rep "186.dat" title ""  w l lw 1 lc rgb "red"
rep "188.dat" title ""  w l lw 1 lc rgb "red"
rep "190.dat" title ""  w l lw 1 lc rgb "red"
rep "192.dat" title ""  w l lw 1 lc rgb "red"
rep "194.dat" title ""  w l lw 1 lc rgb "red"
rep "196.dat" title ""  w l lw 1 lc rgb "red"
rep "198.dat" title ""  w l lw 1 lc rgb "red"
rep "200.dat" title ""  w l lw 1 lc rgb "red"
rep "202.dat" title ""  w l lw 1 lc rgb "red"
rep "204.dat" title ""  w l lw 1 lc rgb "red"
rep "206.dat" title ""  w l lw 1 lc rgb "red"
rep "208.dat" title ""  w l lw 1 lc rgb "red"
rep "210.dat" title ""  w l lw 1 lc rgb "red"
rep "212.dat" title ""  w l lw 1 lc rgb "red"
rep "214.dat" title ""  w l lw 1 lc rgb "red"
rep "216.dat" title ""  w l lw 1 lc rgb "red"
rep "218.dat" title ""  w l lw 1 lc rgb "red"
rep "220.dat" title ""  w l lw 1 lc rgb "red"
rep "222.dat" title ""  w l lw 1 lc rgb "red"
rep "224.dat" title ""  w l lw 1 lc rgb "red"
rep "226.dat" title ""  w l lw 1 lc rgb "red"
rep "228.dat" title ""  w l lw 1 lc rgb "red"
rep "230.dat" title ""  w l lw 1 lc rgb "red"
rep "232.dat" title ""  w l lw 1 lc rgb "red"
rep "234.dat" title ""  w l lw 1 lc rgb "red"
rep "236.dat" title ""  w l lw 1 lc rgb "red"
rep "238.dat" title ""  w l lw 1 lc rgb "red"
rep "240.dat" title ""  w l lw 1 lc rgb "red"
rep "242.dat" title ""  w l lw 1 lc rgb "red"
rep "244.dat" title ""  w l lw 1 lc rgb "red"
rep "246.dat" title ""  w l lw 1 lc rgb "red"
rep "248.dat" title ""  w l lw 1 lc rgb "red"
rep "250.dat" title ""  w l lw 1 lc rgb "red"
rep "252.dat" title ""  w l lw 1 lc rgb "red"
rep "254.dat" title ""  w l lw 1 lc rgb "red"
rep "256.dat" title ""  w l lw 1 lc rgb "red"
rep "258.dat" title ""  w l lw 1 lc rgb "red"
rep "260.dat" title ""  w l lw 1 lc rgb "red"
rep "262.dat" title ""  w l lw 1 lc rgb "red"
rep "264.dat" title ""  w l lw 1 lc rgb "red"
rep "266.dat" title ""  w l lw 1 lc rgb "red"
rep "268.dat" title ""  w l lw 1 lc rgb "red"
rep "270.dat" title ""  w l lw 1 lc rgb "red"
rep "272.dat" title ""  w l lw 1 lc rgb "red"
rep "274.dat" title ""  w l lw 1 lc rgb "red"
rep "276.dat" title ""  w l lw 1 lc rgb "red"
rep "278.dat" title ""  w l lw 1 lc rgb "red"
rep "280.dat" title ""  w l lw 1 lc rgb "red"
rep "282.dat" title ""  w l lw 1 lc rgb "red"
rep "284.dat" title ""  w l lw 1 lc rgb "red"
rep "286.dat" title ""  w l lw 1 lc rgb "red"
rep "288.dat" title ""  w l lw 1 lc rgb "red"
rep "290.dat" title ""  w l lw 1 lc rgb "red"
rep "292.dat" title ""  w l lw 1 lc rgb "red"
rep "294.dat" title ""  w l lw 1 lc rgb "red"
rep "296.dat" title ""  w l lw 1 lc rgb "red"
rep "298.dat" title ""  w l lw 1 lc rgb "red"
rep "300.dat" title ""  w l lw 1 lc rgb "red"
rep "302.dat" title ""  w l lw 1 lc rgb "red"
rep "304.dat" title ""  w l lw 1 lc rgb "red"
rep "306.dat" title ""  w l lw 1 lc rgb "red"
rep "308.dat" title ""  w l lw 1 lc rgb "red"
rep "310.dat" title ""  w l lw 1 lc rgb "red"
rep "312.dat" title ""  w l lw 1 lc rgb "red"
rep "314.dat" title ""  w l lw 1 lc rgb "red"
rep "316.dat" title ""  w l lw 1 lc rgb "red"
rep "318.dat" title ""  w l lw 1 lc rgb "red"
rep "320.dat" title ""  w l lw 1 lc rgb "red"
rep "322.dat" title ""  w l lw 1 lc rgb "red"
rep "324.dat" title ""  w l lw 1 lc rgb "red"
rep "326.dat" title ""  w l lw 1 lc rgb "red"
rep "328.dat" title ""  w l lw 1 lc rgb "red"
rep "330.dat" title ""  w l lw 1 lc rgb "red"
rep "332.dat" title ""  w l lw 1 lc rgb "red"
rep "334.dat" title ""  w l lw 1 lc rgb "red"
rep "336.dat" title ""  w l lw 1 lc rgb "red"
rep "338.dat" title ""  w l lw 1 lc rgb "red"
rep "340.dat" title ""  w l lw 1 lc rgb "red"
rep "342.dat" title ""  w l lw 1 lc rgb "red"
rep "344.dat" title ""  w l lw 1 lc rgb "red"
rep "346.dat" title ""  w l lw 1 lc rgb "red"
rep "348.dat" title ""  w l lw 1 lc rgb "red"
rep "350.dat" title ""  w l lw 1 lc rgb "red"
set term pngcairo
set output ".png"
rep
