set title "Bz on cirle r=33.3cm z=5cm by MC30"
set xl "azimuthal angle [rad]"
set yl "(B_{z} - B_{z}^{ave} [T])* 10^{5}"
set yl offset -1.8,0
set autoscale
set title font "Arial,20"
set xl font "Arial,20"
set yl font "Arial,20"
set title offset 0,0
set xtics font "Arial,15"
set ytics font "Arial,15"
set key font "Arial,15"
set border lw 2
set key right bottom
#p "PhaseCheck_abs.dat" u 1:($2*1.e5) title "MC10" w lp lw 2 lc   rgb "black" 
#p "PhaseCheck_abs.dat" u 1:($3*1.e5) title "MC11" w lp lw 2 lc    rgb "black"
#p "PhaseCheck_abs.dat" u 1:($4*1.e5) title "MC20" w lp lw 2 lc rgb "black"
#p "PhaseCheck_abs.dat" u 1:($5*1.e5) title "MC21" w lp lw 2 lc rgb "black"
p "PhaseCheck_abs.dat" u 1:($6*1.e5) title "MC30" w lp lw 2 lc rgb "black"
set term pngcairo
set output "PhaseCheck_abs.png"
rep







