set title "difference"
#set title "segments"
set xl "x[m]"
set yl "B_{arc}-B_{seg} [T]"
#set yl "B [T] *10^{4}"
set yl offset -1.8,0
set autoscale
set title font "Arial,20"
set xl font "Arial,20"
set yl font "Arial,20"
set title offset 0,0
set xtics font "Arial,15"
set ytics font "Arial,15"
set key font "Arial,15"
set border lw 2
set key center bottom
set logscale y
set format y "10^{%L}"
p "compare.dat" u 1:(abs($2)) title "Bx"  w l lw 2 lc rgb "web-blue"
rep "compare.dat" u 1:(abs($3)) title "By" w l lw 2 lc rgb "blue"
rep "compare.dat" u 1:(abs($4)) title "Bz" w l lw 2 lc rgb "black"
#p "compare.dat" u 1:5 title "Bx" w l lw 2 lc rgb "web-blue"
#rep "compare.dat" u 1:6 title "By" w l lw 2 lc rgb "blue"
#rep "compare.dat" u 1:7 title "Bz" w l lw 2 lc rgb "black"
set term pngcairo
set output ".png"
rep







