set title "improving reproductivity of iron yoke"
set xlabel "truncated eigenmode [a.u]"
set yl "p-p of error Bz [Gauss]"
set ylabel offset -1.8,0
set autoscale
set title font "Arial,20"
set xl font "Arial,20"
set yl font "Arial,20"
set title offset 0,0
set xtics font "Arial,15"
set ytics font "Arial,15"
set key font "Arial,15"
set border lw 2
set logscale y
set format y "10^{%L}"
p "decreasing_error_type1.dat" title "type 1" w l lw 2 lc rgb "web-blue" 
rep "decreasing_error_type2.dat" title "type 2" w l lw 2 lc rgb "red" 
rep "decreasing_error_type3.dat" title "type 3" w l lw 2 lc rgb "black" 
set terminal pngcairo
set output "singular_value.png"
replot







