set title ""
set xl "azimuthal angle [rad]"
set yl "Br[T]*10^{4}"
set yl offset -1.8,0
set autoscale
set title font "Arial,20"
set xl font "Arial,20"
set yl font "Arial,20"
set title offset 0,0
set xtics font "Arial,15"
set ytics font "Arial,15"
set key font "Arial,15"
set border lw 2
set key center bottom
set xr[-3.14:3.14]
p "dipole.dat" u 1:2 title "" w l lw 2 lc rgb "red"
rep "dipole.dat" u 1:3 title "" w l lw 2 lc rgb "blue"
set term pngcairo
set output ".png"
rep







