set title ""
set xl ""
set yl ""
set autoscale
set border lw 2
set key top right
set autoscale
set title font "Arial,20"
set xl font "Arial,20"
set yl font "Arial,20"
set title offset 0,0
set xtics font "Arial,15"
set ytics font "Arial,15"
set ztics font "Arial,15"
set key font "Arial,15"
set border lw 2
set ticslevel 0
#set noxtics
#set xr[-.76:.76]
#set yr[-.76:.76]
#set xl offset -2,-2
#set yl offset -2,0
set view equal xyz
sp "storage.dat" title "" pt 7 ps .4 lc rgb "web-blue"
rep "../config/shim_20210923.dat" title "" pt 4 ps 1.8 lc rgb "black"
#set term pngcairo
set output "1280x960.png"
#set output ".png"
rep







