set title "reaching uniformity after shimming"
set xl "truncation eigenmode [a.u.]"
set yl "uniformity after shimming [ppm]"
set yl offset -1.8,0
set autoscale
set title font "Arial,20"
set xl font "Arial,20"
set yl font "Arial,20"
set title offset 0,0
set xtics font "Arial,15"
set ytics font "Arial,15"
set key font "Arial,15"
set border lw 2
set grid y lw 2
set logscale y
set format y "10^{%L}"
set key right top
set xr [0:80]
#p "LowerMode.dat" u 1:2 title "local uniformity" w l lw 2 lc rgb "red"
p "LowerMode.dat" u 1:3 title "azimuthally averaged" w l lw 2 lc rgb "web-blue"
set term pngcairo
set output ".png"
rep







