set title ""
set xl "x [cm]"
set yl "B_{z} [T]"
set yl offset 1.,0
set autoscale
set xl offset 0,1.3
set xtics offset 0,.5
set title font "Arial,20"
set xl font "Arial,15"
set yl font "Arial,15"
set title offset 0,0
set xtics font "Arial,15"
set ytics font "Arial,15"
set key font "Arial,15"
set border lw 2
set size ratio 1.2
#set key top outside
p "AxialDependence.dat" u 1:2 title "" w l lw 2 lc rgb "web-blue"
rep "AxialDependence.dat" u 1:3 title "" w l lw 2 lc rgb "red"
rep "AxialDependence.dat" u 1:4 title "" w l lw 2 lc rgb "web-green"
rep "AxialDependence.dat" u 1:5 title "" w l lw 2 lc rgb "orange"
rep "AxialDependence.dat" u 1:6 title "" w l lw 2 lc rgb "gray"
rep "AxialDependence.dat" u 1:7 title "" w l lw 2 lc rgb "violet"
set term pdfcairo
set output "AxialDependence.pdf"
rep







