set title ""
set xl "x [cm]"
set yl "dB_{z}/dx [T/m]"
set yl offset 1.,0
set autoscale
set xl offset 0,1.3
set xtics offset 0,.5
set title font "Arial,20"
set xl font "Arial,15"
set yl font "Arial,15"
set title offset 0,0
set xtics font "Arial,15"
set ytics font "Arial,15"
set key font "Arial,15"
set border lw 2
set xtics 5
set size ratio 1.2
set key at 20,1.
p "AxialGradient.dat" u 1:2 title "iron yoke" w l lw 2 lc rgb "web-blue"
rep "AxialGradient.dat" u 1:3 title "MC10" w l lw 2 lc rgb "red"
rep "AxialGradient.dat" u 1:4 title "MC11" w l lw 2 lc rgb "web-green"
rep "AxialGradient.dat" u 1:5 title "MC20" w l lw 2 lc rgb "orange"
rep "AxialGradient.dat" u 1:6 title "MC21" w l lw 2 lc rgb "gray"
rep "AxialGradient.dat" u 1:7 title "MC30" w l lw 2 lc rgb "violet"
set term pdfcairo
set output "AxialGradient.pdf"
rep