set title ""
set xl "Horizontal shift [mm]"
set yl "U_{lc} [ppm]"
set xl offset 0,0
set yl offset 0,0
set autoscale
set title font "Arial,20"
set xl font "Arial,15"
set yl font "Arial,15"
set title offset 0,0
set xtics font "Arial,15"
set ytics font "Arial,15"
set key font "Arial,15"
set border lw 2
set key top center
p "HorizontalShift.dat" u 1:2 title "iron yoke" w lp lw 2 lc rgb "web-blue"
rep "HorizontalShift.dat" u 1:3 title "MC10" w lp lw 2 lc rgb "red"
rep "HorizontalShift.dat" u 1:4 title "MC11" w lp lw 2 lc rgb "web-green"
rep "HorizontalShift.dat" u 1:5 title "MC20" w lp lw 2 lc rgb "orange"
rep "HorizontalShift.dat" u 1:6 title "MC21" w lp lw 2 lc rgb "gray"
rep "HorizontalShift.dat" u 1:7 title "MC30" w lp lw 2 lc rgb "violet"
set term pdfcairo
set output "HorizontalShifts.pdf"
rep







